ci: enfore conventional commits
Add a pre-commit check to enforce git commit message standard mentioned
in the CONTRIBUTION GUIDELINES

--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -25,3 +25,9 @@ repos:
     hooks:
       - id: pyright
         args: ["--project", "pyproject.toml"]
+
+  - repo: https://github.com/compilerla/conventional-pre-commit
+    rev: v3.5.0
+    hooks:
+      - id: conventional-pre-commit
+        stages: [commit-msg]
