--- a/pyproject.toml
+++ b/pyproject.toml
@@ -7,7 +7,7 @@ requires-python = ">=3.12"
 license = {text = "AGPL-3.0-or-later"}  # Upgraded to Affero GPL v3 or later
 
 dependencies = [
-    # Core runtime dependencies will be added here later
+    "requests",
 ]
 
 [project.urls]
